# mandelbrotVeiwer

./: .gitmodules  CMakeLists.txt  README.md  mandelbrot.cpp
lib/: CMakeLists.txt
src/: button.cpp  button.hpp  mandelbrot.cl  mandelbrot.cpp  opencl.cpp  opencl.hpp
